# MTR

./: .gitignore  CLAUDE.md  Dockerfile.gui  README.md  gui.py  launch.sh  pyproject.toml  run_metis.py  test_run_metis.py
.github/workflows/: unit_tests.yaml
container/: Dockerfile  compose.yml
container/archive/: Containerfile
container/archive/scripts/: Environment.cfg  dbsetup.sh  ds.cfg  entrypoint_dataserver.sh
container/archive/scripts/codes/: __init__.py
container/archive/scripts/codes/drld_parser/: data_reduction_library_design.py
examples/: LMS_RAD_06.yaml  small_test.yaml  small_test_img_n.yaml
src/: archive.py  gui.py  run_metis.py
tests/: conftest.py  test_archive.py  test_gui.py  test_run_metis.py
